adding thumbnails to menu

--- a/Client.fedex/Gridlock/src/index.html
+++ b/Client.fedex/Gridlock/src/index.html
@@ -7,6 +7,74 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <style>
+    .land1::before {
+        background-image: url('/assets/land_01.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .land2::before {
+        background-image: url('/assets/land_02.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .land3::before {
+        background-image: url('/assets/land_03.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .land4::before {
+        background-image: url('/assets/land_04.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .land5::before {
+        background-image: url('/assets/land_05.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .land6::before {
+        background-image: url('/assets/land_06.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    span.ui-menuitem-text {
+      vertical-align: top;
+      padding-top: 6px;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
