adding avatars and monster'

--- a/Client.fedex/Gridlock/src/index.html
+++ b/Client.fedex/Gridlock/src/index.html
@@ -69,6 +69,76 @@
         content:"";
         margin-right: 10px;
     }
+    .mon1::before {
+        background-image: url('/assets/monster_01.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .mon2::before {
+        background-image: url('/assets/monster_02.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .mon3::before {
+        background-image: url('/assets/monster_03.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .avatar1::before {
+        background-image: url('/assets/avatar_01.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .avatar2::before {
+        background-image: url('/assets/avatar_02.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .avatar3::before {
+        background-image: url('/assets/avatar_03.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
+    .avatar4::before {
+        background-image: url('/assets/avatar_04.png');
+        background-size: 30px 30px;
+        display: inline-block;
+        width: 30px; 
+        height: 30px;
+        border-radius: 15px;
+        content:"";
+        margin-right: 10px;
+    }
     span.ui-menuitem-text {
       vertical-align: top;
       padding-top: 6px;
